--- a/IMW-A1-Draft-Artifact/poster.html
+++ b/IMW-A1-Draft-Artifact/poster.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="">
     <head>
+        <title>Theorizing the Web</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="poster-layout.css">
         <link rel="stylesheet" href="blue-letters.css">
