--- a/IMW-A1-Draft-Artifact/index.html
+++ b/IMW-A1-Draft-Artifact/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Theorizing the Web</title>
         <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <link rel="stylesheet" href="poster-layout.css">
         <link rel="stylesheet" href="blue-letters.css">
         <link rel="stylesheet" href="purple-letters.css">
