Fixed kerning and positioning

--- a/IMW-A1-Draft-Artifact/index.html
+++ b/IMW-A1-Draft-Artifact/index.html
@@ -762,9 +762,9 @@
       </div>
 
       <div class="paragraph-2">
-        <p>
+        <b>
           10:00 AM ET DOORS OPEN
-        </p>
+        </b>
       </div>
 
 <!-- SESSION one PINK -->
@@ -951,9 +951,9 @@
 
       <div class="paragraph-3">
         <p>
-          NOON-1:15PM ET
+          <b> NOON-1:15PM ET
           <br> STUDIO A #A1
-          <br> RAGE AGAINST THE MACHINES
+          <br> RAGE AGAINST THE MACHINES </b>
           <br>
           <br> .Moderator
           <br> Danny Spitzberg
@@ -974,8 +974,8 @@
 
       <div class="paragraph-4">
         <p>
-          STUDIO B #B1
-          <br> KNOW BODY
+          <b> STUDIO B #B1
+          <br> KNOW BODY </b>
           <br>
           <br> .Moderator
           <br> Apryl Williams
@@ -996,8 +996,8 @@
 
       <div class="paragraph-5">
         <p>
-          STUDIO C #C1
-          <br> SPACED OUT
+          <b> STUDIO C #C1
+          <br> SPACED OUT </b>
           <br>
           <br> Winston Hearn
           <br> What is Assistive Tech?
@@ -1189,9 +1189,9 @@
 
       <div class="paragraph-6">
         <p>
-          1:30PM-2:45PM ET
+          <b> 1:30PM-2:45PM ET
           <br> STUDIO A #A2
-          <br> SKILL STACKS ON STACKS
+          <br> SKILL STACKS ON STACKS </b>
           <br>
           <br> .Moderator
           <br> Bryn Nieboer
@@ -1211,8 +1211,8 @@
 
       <div class="paragraph-7">
         <p>
-          STUDIO B #B2
-          <br> FOR THE GRAM
+          <b> STUDIO B #B2
+          <br> FOR THE GRAM </b>
           <br>
           <br> .Moderator
           <br> Naadya Lev
@@ -1232,8 +1232,8 @@
 
       <div class="paragraph-8">
         <p>
-          STUDIO C #C2
-          <br> GOTTA GO FAST
+          <b> STUDIO C #C2
+          <br> GOTTA GO FAST </b>
           <br>
           <br> .Moderator
           <br> Gabi Schaffzin
@@ -1485,9 +1485,9 @@
 
       <div class="paragraph-9">
         <p>
-          3:00PM-4:15PM ET
+          <b> 3:00PM-4:15PM ET
           <br> STUDIO A #A3
-          <br> TECHNOLOGIES CAN HAVE A LITTLE POLICY, AS A TREAT
+          <br> TECHNOLOGIES CAN HAVE A LITTLE POLICY, AS A TREAT </b>
           <br>
           <br> .Moderator
           <br> Brenda Dvoskin
@@ -1507,8 +1507,8 @@
 
       <div class="paragraph-10">
         <p>
-          STUDIO B #B3
-          <br> INFRASTRUCTURE'S HIDDEN LABOR
+          <b> STUDIO B #B3
+          <br> INFRASTRUCTURE'S HIDDEN LABOR </b>
           <br>
           <br> .Moderator
           <br> Erik Forman
@@ -1526,8 +1526,8 @@
 
       <div class="paragraph-11">
         <p>
-          STUDIO C #C3
-          <br> I HAVE SEEN THE FUTURE
+          <b> STUDIO C #C3
+          <br> I HAVE SEEN THE FUTURE </b>
           <br>
           <br> Adam Boffa
           <br> Web Theory in a Warming World
@@ -1702,9 +1702,9 @@
 
       <div class="paragraph-12">
         <p>
-          6:00PM-7:30PM ET
+          <b> 6:00PM-7:30PM ET
           <br> REDSTONE THEATER #K1
-          <br> POLITICS OF DESIGN
+          <br> POLITICS OF DESIGN </b>
           <br>
           <br> .Moderator
           <br> Johnathan Flowers
@@ -1864,9 +1864,9 @@
 
       <div class="paragraph-13">
         <p>
-          7:45PM-9:15PM ET
+          <b> 7:45PM-9:15PM ET
           <br> REDSTONE THEATER #K2
-          <br> PAID ATTENTION
+          <br> PAID ATTENTION </b>
           <br>
           <br> .Moderator
           <br> Britney Gil
@@ -2206,18 +2206,6 @@
             <div class="whiteout-point-four-E"></div>
             <div class="vertical-rectangle-E"></div>
         </div>
-        <div class="letter letter-T">
-            <div class="crescent-topleft-T"></div>
-            <div class="crescent-topright-T"></div>
-            <div class="whiteout-top-T"></div>
-            <div class="crescent-bottom-T"></div>
-            <div class="whiteout-left-T"></div>
-            <div class="whiteout-right-T"></div>
-            <div class="vertical-rectangle-T"></div>
-            <div class="whiteout-top-crescent-T"></div>
-            <div class="whiteout-right-crescent-T"></div>
-            <div class="vertical-rectangle-cover-T"></div>
-        </div>
         <div class="letter letter-N">
             <div class="vertical-rectangle-left-N"></div>
             <div class="vertical-rectangle-right-N"></div>
@@ -2229,6 +2217,18 @@
             <div class="middle-whiteout-N"></div>
             <div class="top-left-whiteout-N"></div>
             <div class="bottom-right-whiteout-N"></div>
+        </div>
+        <div class="letter letter-T">
+            <div class="crescent-topleft-T"></div>
+            <div class="crescent-topright-T"></div>
+            <div class="whiteout-top-T"></div>
+            <div class="crescent-bottom-T"></div>
+            <div class="whiteout-left-T"></div>
+            <div class="whiteout-right-T"></div>
+            <div class="vertical-rectangle-T"></div>
+            <div class="whiteout-top-crescent-T"></div>
+            <div class="whiteout-right-crescent-T"></div>
+            <div class="vertical-rectangle-cover-T"></div>
         </div>
         <div class="letter letter-E">
             <div class="crossbar-crescent-E"></div>
@@ -2289,9 +2289,9 @@
       </div>
 
       <div class="paragraph-14">
-        <p>
+        <b>
           NOON ET DOORS OPEN
-        </p>
+        </b>
       </div>
 
 <!-- SESSION four PINK -->
@@ -2495,9 +2495,9 @@
 
       <div class="paragraph-15">
         <p>
-          1:30PM-2:45PM ET
+          <b>1:30PM-2:45PM ET
           <br> STUDIO A #4
-          <br> SORT BY
+          <br> SORT BY </b>
           <br>
           <br> Ed Summers
           <br> Seeing Software: Web Archives and the Forensic Imaginary
@@ -2512,8 +2512,8 @@
 
       <div class="paragraph-16">
         <p>
-          STUDIO B #B4
-          <br> DON'T PUT A RING ON IT
+          <b> STUDIO B #B4
+          <br> DON'T PUT A RING ON IT </b>
           <br>
           <br> .Moderator
           <br> Johnathan Flowers
@@ -2533,8 +2533,8 @@
 
       <div class="paragraph-17">
         <p>
-          STUDIO C #C4
-          <br> QUEER FUTURES
+          <b> STUDIO C #C4
+          <br> QUEER FUTURES </b>
           <br>
           <br> .Moderator
           <br> Xiaowei Wang
@@ -2737,9 +2737,9 @@
 
       <div class="paragraph-18">
         <p>
-          3:00PM-4:15PM ET
+          <b> 3:00PM-4:15PM ET
           <br> STUDIO A #A5
-          <br> 1995: THE YEAR THE INTERNET BROKE
+          <br> 1995: THE YEAR THE INTERNET BROKE </b>
           <br>
           <br> .Moderator
           <br> Stephanie Monohan
@@ -2753,8 +2753,8 @@
 
       <div class="paragraph-19">
         <p>
-          STUDIO B #B5
-          <br> ON READ
+          <b> STUDIO B #B5
+          <br> ON READ </b>
           <br>
           <br> .Moderator
           <br> Livia Foldes
@@ -2980,8 +2980,8 @@
 
       <div class="paragraph-20">
         <p>
-          4:45PM-6:00PM ET
-          <br> REDSTONE THEATER #K3
+          <b> 4:45PM-6:00PM ET
+          <br> REDSTONE THEATER #K3 </b>
           <br> GAINING ACCESS
           <br>
           <br> .Moderator
@@ -3167,9 +3167,9 @@
 
       <div class="paragraph-21">
         <p>
-          6:15PM-7:30PM ET
+          <b> 6:15PM-7:30PM ET
           <br> REDSTONE THEATER #K4
-          <br> TECH AS INVASIVE SPECIES
+          <br> TECH AS INVASIVE SPECIES </b>
           <br>
           <br> .Moderator
           <br> David A. Banks
@@ -3256,8 +3256,9 @@
       </div>
 
       <div class="paragraph-22">
-        <p>
+        <b>
           7:30PM-10:00PM ET
+        </b>
       </div>
 
     </body>
